<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Descubre Europa</string>
    <string name="bandera">Bandera</string>
    <string name="selecciona_pais">Selecciona un país</string>
    <string name="detelle_pais">Pais info</string>
    <string name="nombre">Nombre (en)</string>
    <string name="nombre_local">Nombre local</string>
    <string name="capital">Capital</string>
    <string name="idiomas">Idioma/s</string>
    <string name="btn_ciudades">Ver ciudades</string>
    <string name="ue">Unión Europea</string>
    <string name="buscar">Buscar</string>
    <string name="ver_paises">Ver países</string>
    <string name="favorito">Favorito</string>
    <string name="favoritos">Favoritos</string>
    <string name="list_ciudades">Ciudades</string>
    <string name="ciudad_borrada">Ciudad eliminada</string>
    <string name="snackbar_undo">Deshacer</string>
    <string name="ciudad">Ciudad</string>
    <string name="guardar_ciudad">Guardar ciudad</string>
    <string name="ciudad_added">Ciudad añadida</string>
    <string name="nombre_ciudad_vacio">Nombre vacio</string>
    <string name="add_city">Añadir ciudad</string>
    <string name="add_business">Añadir empresa</string>
    <string name="selecciona_empresa">Selecciona una empresa</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="web">Pagina web</string>
    <string name="empresa_borrada">Empresa eliminada</string>
    <string name="empresa_added">Empresa añadida</string>
    <string name="guardar_empresa">Guardar empresa</string>
    <string name="selecciona_ruta">Selecciona una ruta</string>
    <string name="add_ruta">Añadir ruta</string>
    <string name="ruta_borrada">Ruta eliminada</string>
    <string name="ver_empresas">Ver empresas</string>
    <string name="ver_rutas">Ver rutas</string>
    <string name="editar_empresa">Editar empresa</string>
    <string name="add_empresa">Añadir empresa</string>
    <string name="empresa_edited">Empresa editada</string>
    <string name="ruta_added">Ruta Añadida</string>
    <string name="ciudades_iguales_error">La ruta no es valida</string>
    <string name="guardar_ruta">Guardar ruta</string>
    <string name="ciudad_inicio">Ciudad inicio</string>
    <string name="ciudad_fin">Ciudad fin</string>
    <string name="empresa">Empresa</string>
    <string name="precio">Precio €</string>
    <string name="duracion">duracion (min)</string>
    <string name="comentarios">Comentarios (Opcional)</string>
    <string name="error_add_ruta">Rellena los campos obligatorios</string>
    <string name="ruta_edited">Ruta editada</string>
    <string name="editar_ruta">Editar ruta</string>
    <string name="ok">Si</string>
    <string name="ciudad_con_rutas">Ciudad con rutas</string>
    <string name="ciudad_con_rutas_mensaje">Esta ciudad tiene rutas asignadas estas seguro de que quieres borrarlas</string>
    <string name="cancelar">Cancelar</string>
    <string name="empresa_con_rutas">Empresa con rutas</string>
    <string name="empresa_con_rutas_mensaje">Esta empresa tiene rutas definidas seguro que deseas eliminarla</string>
    <string name="about">Acerca de</string>
    <string name="mi_github">Mi perfil de GitHub</string>
    <string name="about_mensaje">Aplicacion desarollada por Jorge Martín Llorente para el modulo Programacion Multimedia y Dispositivos Moviles impartido por el profesor Óscar Novillo Camacho</string>
</resources>