<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/listPaisesFragment"
        android:menuCategory="secondary"
        android:title="@string/selecciona_pais"
        android:contentDescription="@string/ver_paises"
        app:showAsAction="never" />

    <item
        android:id="@id/listEmpresasFragment"
        android:menuCategory="secondary"
        android:title="@string/selecciona_empresa"
        android:contentDescription="@string/ver_empresas"
        app:showAsAction="never" />

    <item
        android:id="@id/listRutasFragment"
        android:menuCategory="secondary"
        android:title="@string/selecciona_ruta"
        android:contentDescription="@string/ver_rutas"
        app:showAsAction="never" />

    <group android:id="@+id/drawer_group_favoritos"
        android:menuCategory="container">
        <item
            android:id="@+id/drawer_favoritos"
            android:title="@string/favoritos"
            android:contentDescription="@string/favoritos" >
            <menu>
            </menu>
        </item>
    </group>

</menu>